# lazy_theta_star_planners

./: .gitignore  CMakeLists.txt  ChangeLog.txt  README.md  log_bigmap.txt  log_labmap.txt  notas_modificacion.txt  package.xml  path.txt  ws.code-workspace
action/: ExecutePath.action
bag/: esquiva_mesa.bag
cfg/: 3d_global_params.yaml  GlobalPlanner.cfg  Grid.cfg  LocalPlanner.cfg  costmap_params.yaml  global.cfg  global_params.yaml  goals.yaml  local.cfg  local_costmap_lidar.yaml  local_costmap_params.yaml  local_costmap_test.yaml  local_params.yaml  sim.cfg  sim_auto.cfg
cfg/missions/: shelter.yaml
cfg/sim_cfg/: amcl.yaml  costmap_params.yaml  global_params.yaml  local_costmap_params.yaml  local_params.yaml
doc/: theta_star_graph.odg
include/PlannersLib/: PlannersLib.hpp
include/theta_star/: GlobalPlanner.hpp  LocalPlanner.hpp  ThetaStar.hpp  ThetaStar2D.hpp  ThetaStar3D.hpp  grid3d.hpp
launch/: 3d_global.launch  costmap_config.yaml  full_sim.launch  global_planner.launch  interface.launch  local_planner.launch  minterface.launch  octomap_server.launch  sim_mockup.pgm  sim_mockup.yaml  sim_planner.launch  test.yaml  test_3d_costmap.launch  theta_star_example_sim.launch  theta_star_maze.launch  tintas.pgm  tintas.yaml  tower.pgm  tower.yaml  tunel2.pgm  tunel2.yaml
resource/: big_map.pgm  bloque.bt  costmap_params.yaml  empty.bt  generated_catec_map.ot  l_block.bt  log.txt  mapplot.m  onlyFloor.bt  output_path.txt  pipes.bt  second_lab_map_cut.yaml  testbed.bt  testbedFancowl.bt  testbedTable.bt  testbedTableCropped.bt  testbed_withoutFloor.bt  tintas.pgm  tintas.yaml  wall.bt
resource/lab_maps/: big_map.pgm  big_map.yaml  lab_map.pgm  lab_map.yaml  lab_map_original.yaml  second_lab_map_cut.pgm  second_lab_map_cut.yaml
resource/mazes/: 1.pgm  1.yaml  2.pgm  2.yaml  200_by_200_orthogonal_maze.yaml  30_30_orthogonal_maze.yaml  30_30_orthogonal_maze2.yaml  big_circular.yaml  maze1.yaml  maze5.yaml  maze_small.yaml  rva_world_final.yaml
resource/tfg_mazes/: maze.yaml
scripts/: 3dtests_batch.sh  generate_bunch_of_gridm.sh
src/: GlobalPlanner.cpp  LocalPlanner.cpp  ThetaStar.cpp  ThetaStar2D.cpp  ThetaStar3D.cpp  action_goal_interface_node.cpp  custom_costmap_node.cpp  global_planner_node.cpp  goal_publisher.cpp  grid_3d_generator_node.cpp  hmi_fake.cpp  local_planner_node.cpp  sim_planner.cpp  sim_planner_node.cpp  theta_star_example.cpp
src/src/: PlannersLib.cpp  ThetaStar.cpp  global_planner_node.cpp  local_planner_node.cpp
src/src/src/: ThetaStar.cpp  global_planner_node.cpp  local_planner_node.cpp
srv/: GoalCmd.srv  RequestPath.srv  SetCostParams.srv  checkObstacles.srv
trees/: sample.xml
viz/: 3dcost_test.rviz  local.rviz  rviz_nav_config.rviz  sim.rviz  theta_star_example.rviz
