<?xml version="1.0"?>
<package>
  <name>theta_star_2d</name>
  <version>1.0.1</version>
  <description>Two-dimensional Lazy Theta Star with Optimization implementation and Planners</description>

  <maintainer email="reyarcenegui@gmail.com">Fali</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
   <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
